Operation: label hinzugefügt zum verweisen Measurement: mehr folgt morgen... UserConstants: Datum angepasst Titelseite: Titel von MetaModel auf Metamodell geändert
git-svn-id: file:///home/nik/repositories/svn/master@546 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/UserConstants.tex
+++ b/public/doku/metaModel/trunk/content/UserConstants.tex
@@ -13,7 +13,7 @@
 % Konstante: Datum der Abgabe
 % Wird auf der Titelseite und in der
 % Ehrenwörtlichen Erklärung verwendet
-\newcommand{\submissionDate}{\emph{Noch nicht eingereichte Vorabversion}}
+\newcommand{\submissionDate}{13.03.2013}
 
 % Konstante: Ort der Abgabe
 % Wird in der Ehrenwörtlichen Erklärung verwendet
