--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Measurement.tex
@@ -58,24 +58,32 @@ Hinzu kommen die folgenden Operationen, welche zum Befüllen der o.g. Listen die
 
 
 \subsubsection{AccountType}
+Der Typ eines Accounts (AccountType) dient zur Klassifizieren eines Kontos. Beispielsweise kann ein Konto als Bankkonto klassifiziert werden. Untertyp (SubAccountType) kann an dieser Stelle z.B. ein Giro- oder Kreditkartenkonto sein.
+Sobald ein AccountType Exemplare besitzt, kann dieser nicht mehr gelöscht werden (siehe folgender Abschnitt). Um Hierarchien dieser Art abbilden zu können sind die folgenden Assoziationen und Operationen notwendig. 
 
-\TODO[Kapitel schreiben]
-
--- Attribute: MAccountType** subAccountTypes hierarchy MAccountTypeHierarchy
-
--- Operationen:
-
+Im Metamodell besitzt ein AccountType (neben der vom \term{QuantifiedObjectType} geerbten) die folgende Assoziation.
 \begin{description}
-	\item[addSubAccountType] Beschreiben
+	\item[MAccountType** subAccountTypes hierarchy MAccountTypeHierarchy] Diese Liste verbindet AccountTypes in Form einer Hierachie. Besonders bei dem Hinzufügen von SubAccounts ist diese Hierarchie relevant (dazu mehr im folgenden Abschnitt).
+\end{description}
+
+Hinzu kommt die folgende Operation, welche zum Befüllen der o.g. Liste dient.
+\begin{description}
+	\item[addSubAccountType] Fügt einen neuen AccountType der subAccountTypes Liste eines AccountTypes hinzu.
 \end{description}
 
 
 \subsubsection{Account \& AccountType}
 Wie bereits beschrieben, ist ein Account in einem AccountType klassifiziert. Dieser Typ ist unter anderem relevant, wenn dem Konto ein neues Unterkonto hinzugefügt werden soll.  
+In Abbildung \refImg{Measurement:AccTypeHier} wird eine AccountType Hierarchie dargestellt. \term{A} ist in diesem Beispiel der oberste AccountType, welcher die darunterliegenden SubAccountTypes referenziert. 
+Auf \term{F} wird von keinem AccountType referenziert und refernziert auch selbst keine anderen AccountTypes.  
 
+\img[width=\relWidth{0.4}]{measurement/AccountTypeHierarchy.png}{AccountType Hierarchie}{Measurement:AccTypeHier}
 
-\img[width=\relWidth{0.8}]{measurement/bild.png}{Account \& AccountType}{Measurement:EindeutigesLabel}
+Nun sollen Exemplare (also Accounts) erstellt werden, welche SubAccounts enthalten. In Abbildung \refImg{Measurement:SubAccounts} können die im Folgenden beschriebenen Fälle nachvollzogen werden.
+Der Einfachheit halber wird mit \term{K1:A} ein Account \term{K1} mit AccountType \term{A} bezeichnet. Da $C \leq A$ ist, darf \term{K2} als SubAccount zu \term{K1} hinzugefügt werden.
+In den anderen drei Fällen ist der AccountType vom SubAccount entweder nicht $\leq$ dem Typen des Hauptkontos (Beispiel 2 und 4, von links) oder aber der AccountType ist in einer anderen Hierarchie (Beispiel 3, von links).
 
+\img[width=\relWidth{0.5}]{measurement/SubAccounts.png}{SubAccount Exemplare}{Measurement:SubAccounts}
 
 Daraus ergibt sich die folgende Konsistenzbedingung, welche bei Nichteinhaltung zu einer \term{ConsistencyException} führt.
 \begin{equation} \forall \, a \in Account: \forall s \in a.subaccounts: s.type \leq a.type
@@ -85,37 +93,34 @@ Daraus ergibt sich die folgende Konsistenzbedingung, welche bei Nichteinhaltung 
 
 
 \subsubsection{AccountManager}
+Der AccountManager dient zur Erstellung von Accounts und beinhaltet alle Accounts des Modells.
 
-\TODO[Kapitel schreiben]
-
--- Attribute: 
-
+Im Metamodell besitzt der AccountManager die folgende Assoziation.
 \begin{description}
-	\item[Account** accounts] Beschreiben
+	\item[Account** accounts] Diese Liste beinhaltet alle Accounts des Modells.
 \end{description}
 
--- Operationen:
-
+Hinzu kommt die folgende Operation, welche zum Befüllen der o.g. Liste dient.
 \begin{description}
-	\item[createAccount] Beschreiben
+	\item[createAccount] Dient zum Erstellen von Accounts. Es wird ein Name, ein \term{MAccountType} sowie ein \term{MObject} übergeben, auf welches sich das Konto bezieht.
 \end{description}
+
+Neben den Accounts werden auch die \term{AccountTypes} zentral verwaltet. Dazu dient der \term{AccountTypeManager}.
 
 
 \subsubsection{AccountTypeManager}
+Der AccountTypeManager dient zur Erstellung von \term{AccountTypes} und beinhaltet alle \term{AccountTypes} des Modells.
 
-\TODO[Kapitel schreiben]
-
--- Attribute: 
-
+Im Metamodell besitzt der \term{AccountTypeManager} die folgende Assoziation.
 \begin{description}
 	\item[MAccountType** accountTypes] Beschreiben
 \end{description}
 
--- Operationen:
-
+Hinzu kommt die folgende Operation, welche zum Befüllen der o.g. Liste dient.
 \begin{description}
-	\item[createAccountType] Beschreiben
+	\item[createAccountType] Dient zum Erstellen von \term{AccountTypes}. Es wird ein Name, ein \term{MType} und ein \term{UnitType} übergeben.
 \end{description}
+\TODO[Alex: Brauchen wir hier noch eine Konsistenzbedingung bzgl. Account-AccountType-UnitType = Account.entries-Measurement.Quantity-Type???]
 
 Wie bereits beschrieben werden in Accounts Messungen in Form von Measurements erfasst. 
 Im folgenden Abschnitt wird auf die Assoziationen und Operationen von Measurements genauer eingegangen.
@@ -169,4 +174,9 @@ Im folgenden Abschnitt wird auf die Assoziationen und Operationen von Measuremen
 -- Nur Operation aggregateMeasurements
 
 
+\subsubsection{Löschen im Bereich Measurement}
 
+\TODO[Kapitel schreiben]
+
+-- Was ist löschbar?
+-- Was nicht? Warum?
