--- a/public/doku/metaModel/trunk/content/pages/Abstract.tex
+++ b/public/doku/metaModel/trunk/content/pages/Abstract.tex
@@ -1,3 +1,7 @@
 \section*{Abstract}
+Im Rahmen des Master Studiums (M.Sc. Studiengang: Business Process Engineering) an der FHDW Hannover
+war es für die Studiengruppe \qq{HFP412} Aufgabe ein Metamodell zu realisieren. Als Grundlage für das Metamodell diente zum einen das Werk 
+\qq{Analysis Patterns} \refLibLiteratur{fowler1997analysis} von Martin Fowler, welcher bereits in den 1990er Jahren wichtige Denkanstöße zur Metamodellierung gab. 
+Sowie zum anderen die Vorlesung und die damit verbundenen Unterlagen zum Thema \qq{Informationsinfrastrukturen} von Herrn Prof. Dr. Michael Löwe. 
 
-\blindtext
+Die vorliegende Ausarbeitung dokumentiert das Projekt \qq{Metamodell} und die damit verbundene Softwarelösung.
