--- a/public/doku/metaModel/trunk/content/pages/Titelseite.tex
+++ b/public/doku/metaModel/trunk/content/pages/Titelseite.tex
@@ -3,7 +3,7 @@
 ~\vfill
 
 \titlepageBox{
-	\imgUnlabeled[width=\relWidth{0.35}]{Logo_FHDW.png}
+	\imgUnlabeled[width=\relWidth{0.35}]{logo-fhdw.pdf}
 }
 
 \titlepageBoxHeadline{Fachhochschule für die Wirtschaft Hannover}{-- FHDW --}
