--- a/public/doku/metaModel/trunk/content/lib/Literatur.bib
+++ b/public/doku/metaModel/trunk/content/lib/Literatur.bib
@@ -3,7 +3,7 @@
 @book{fowler1997analysis,
   title={Analysis Patterns: Reusable Object Models},
   author={Fowler, M.},
-  isbn={9780201895421},
+  isbn={978-0201895421},
   lccn={96042988},
   series={Addison-Wesley Series in Object-Oriented Software Engineering},
   year={1997},
@@ -16,4 +16,13 @@
   volume={206},
   year={1995},
   publisher={Addison-wesley Reading, MA}
+}
+
+
+@booklet{LoeweInfInfra,
+  title = 	 {Informationsinfrastrukturen},
+  author = 	 {Prof. Dr. Michael Löwe},
+  address = 	 {FHDW Hannover, Freundalle 15, 30173 Hannover},
+  month = 	 {3},
+  year = 	 {2010}
 }
