corrected img reference and equations
git-svn-id: file:///home/nik/repositories/svn/master@554 cf7a9c80-4257-4e8c-b9e2-f0888625b119

--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Operation.tex
@@ -135,11 +135,10 @@ Für Links stehen dem Anwender nur zwei Operationen zur Verfügung.
 Wie zuvor erwähnt, ist es für einen Link zwingend notwendig sich an die Konsistenzbedingungen der Assoziation zu halten.
 Bei der Erstellung eines Links wird eine \emph{ConsistencyException} erzeugt, wenn die Quell- und/oder Zielobjekte gemäß der Typebene nicht 
 gestattet sind.
-
-\begin{enumerate}
-\item $\forall \, l \in Link: l.source.type.isLessOrEqual(l.type.source)$
-\item $\forall \, l \in Link: l.target.type.isLessOrEqual(l.type.target)$
-\end{enumerate}
+\begin{equation} \forall \, l \in Link: l.source.type.isLessOrEqual(l.type.source)
+\end{equation} 
+\begin{equation} \forall \, l \in Link: l.target.type.isLessOrEqual(l.type.target)
+\end{equation}
 
 Desweiteren ist es Assoziationen möglich an mehreren Hierarchien teilzunehmen. Zyklische Assoziationen sind auf der Metaebene möglich, 
 da sich sonst keinerlei Aggregationsbeziehung abbilden ließen.
