--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Quantity.tex
@@ -73,15 +73,12 @@ Eine Conversion, also die Umrechnung von einer Unit zur entsprechend zum UnitTyp
 Conversions sind immer lineare Funktionen, damit eine Umkehrbarkeit gewährleistet ist. Jede Conversion enthält also einen Faktor und eine Konstante (als Fraction), um der linearen Funktion m*x+b gerecht zu weden. Die Angabe von m und b hat folgende Semantik: y DefaultUnit = m * unitWert + b.
 Am Beispiel von Fahrenheit und Celsius würde für Celsius die Conversion folgendermaßen lauten, wenn Fahrenheit die DefaultUnit darstellt:
 
-\( Wert_{^\circ F} = Wert_{^\circ C} * \frac{9}{5} + 32 \)
+\begin{equation} Wert_{^\circ F} = Wert_{^\circ C} * \frac{9}{5} + 32
+\end{equation}
 
 Mittels setConversion() wird eine bereits gesetzte Conversion für eine Unit überschrieben.
 Bei setDefaultUnit() wird eine Umrechnung von bereits vorhanden Conversions notwendig, da diese ja in Abhängigkeit zu einer nun veralteten DefaultUnit angegeben wurden. Das betrifft alle Umrechnungen für Units zum selben UnitType wie die DefaultUnit.
-\ref{setDefaultUnitGrafik} beschreibt die Umrechnungen, falls sich eine DefaultUnit ändert.
-\begin{figure}[setDefaultUnit]
-	\includegraphics{../quantity/setDefaultUnit.png}
-	\label{setDefaultUnitGrafik}
-	\caption{Umrechnung beim Ändern einer DefaultUnit}
-\end{figure}
+\refImg{setDefaultUnitGrafik} beschreibt die Umrechnungen, falls sich eine DefaultUnit ändert.
+\img[width=\relWidth{0.8}]{quantity/setDefaultUnit.png}{Umrechnung beim Ändern einer DefaultUnit}{setDefaultUnitGrafik}
 
 \subsubsection{Quantitäten}
