--- a/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
+++ b/public/doku/metaModel/trunk/content/sections/Metamodell_Types.tex
@@ -1,3 +1,31 @@
-\subsection{Types}
+\subsection{Typesystem}
+
+\subsubsection{Aspekte und atomare Typen}
+
+Aspekte stellen gemäß ursprünglichen Modellierung eine Dimension dar, in deren Elementen sich Objekte dynamisch klassifizieren lassen. 
+Atomare Typen der Klasse \emph{AtomicType} werden genau einem Aspekt zugeordnet. Durch die \emph{lessThan}-Assoziation lässt sich aspektintern eine 
+partielle Ordnung \emph{isLessOrEqualThan} ableiten.  
+
+\img[width=\relWidth{0.5}]{type/Aspekte.png}{Umarrangierter Ausschnitt Aspekte}{img_aspekts}
+
+Das Interface \emph{AnythingORMATomicType} ist als Zieltyp der \emph{lessThan}-Assoziation ergänzt worden, 
+um die Möglichkeit zu schaffen einen atomaren Typen mit Obertyp so zu ändern, dass er anschließend keinen 
+Obertypen mehr besitzt. Folgende Möglichkeiten wurden in der Entwurfsphase betrachtet: 
+\begin{enumerate}
+  		\item superType Assoziation mit Multiplizität 0..1
+		\item State-Pattern für atomare Typen \(state \in \{rootType, subType\}\)
+        \item automatisch mitgenerierte Obertypen für Aspekte
+        \item Interface über Anything und AtomicType
+\end{enumerate}
+
+Die erste Variante lässt sich in GOJA aufgrund der restriktiven Set-Methoden nicht realisieren, da diese keine NULL-Werte akzeptieren.
+Ein State-Pattern wäre die sauberste Implementierung gewesen, ist aber wegen fehlenden Mehrwertes ausgeschieden. 
+Variante drei hat den Nachteil, dass die mitgenerierten Typen die Semantik \qq{unkategorisiert} im zugehörigen Aspekt besitzen.
+Damit wird pro Aspekt ein Platzhalter für Null generiert und sorgt für zusätzliche Komplexität ohne Mehrwert. 
+Da ohne State-Pattern aber eine Repräsentation für keinen atomaren Obertypen benötigt wird, wird an dieser Stelle \emph{Anything} verwendet 
+da es ohnehin Obertyp eines jeden Typen ist. Dies ist insofern unsauber, als das \emph{Anything} nicht Teil eines einzigen Aspektes ist.
+Weitere Nachteile sind bisher nicht ersichtlich.
+
+
 
 \TODO[Kapitel schreiben]
